public/stylesheets/style.css
html, body {
	width: 100%;
	height: 100%;	
}

body {
	margin: 0;
	font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
	background-image: url('../images/bodybgblur.jpg');
	background-size: 120%;
	background-position: 20% 20%;
	background-repeat: no-repeat;
	font-size: 2em;
	display: table;
	color: rgb(255, 255, 255);
}

a {
	color: #00B7FF;
}

div.banner {
	background: rgba(0,0,0,0.65);
	padding: 20px;
	display: table-cell;
	vertical-align: middle;
	width: 1%;
	margin-left: 50%;
	background-position: 50% 40%;
	/*background: url('../images/bluroverlay.jpg');*/
	background-size: 120% 120%;
}

h1,p {
	text-shadow: -1px 1px 3px rgba(0,0,0,0.8);
}

p {
	font-size: 120%;
	text-align: center;
	margin: 0.7em auto;
	width: auto;
}

h1 	{
	font-family: pacifico, 'Lucida Grande', 'helvetica neue', helvetica, sans-serif;	
	font-size: 4.55em;
	-webkit-transform: rotate(-5deg);
	transform: rotate(-15deg);
	position: absolute;
	right: 28%;
	top: -3%;
	/*rgb(92, 175, 252)
	-6px 3px white, 2px 1px 7px black*/
	color: rgb(92,175,255);
	text-shadow: -6px 4px white, 
							 2px 1px 7px black;
}

button {
	display: block;
	margin: 1% auto 5% auto;
	padding: 10px 2%;
	
	position: relative;
	top: 0;
	
	color: rgb(230,230,230);
	text-shadow: 0px 0px 5px rgba(0,0,0,0.5);
	
	border: 1px solid rgba(103, 147, 232, 0.5);
	border-bottom: 1px solid #1670a0;
	border-top: none;
	-webkit-box-shadow: inset 1px 1px rgba(0,0,0,0.55);
	box-shadow: inset 1px 1px rgba(20,20,100,0.55),
							inset -1px -1px rgba(20,20,100,0.55),
							0px 10px #1374a8,
							0px 15px 12px -3px black;
	border-radius: 3px;
	
	-webkit-transition: all ease 0.3s;
	
	transition: all ease 0.3s;
	
	cursor: pointer;
	
	background: #59a8e5; /* Old browsers */
	background: -moz-linear-gradient(top,  #59a8e5 0%, #1d86c6 97%, #7ab3ff 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#59a8e5), color-stop(97%,#1d86c6), color-stop(100%,#7ab3ff)); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top,  #59a8e5 0%,#1d86c6 97%,#7ab3ff 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(top,  #59a8e5 0%,#1d86c6 97%,#7ab3ff 100%); /* Opera 11.10+ */
	background: -ms-linear-gradient(top,  #59a8e5 0%,#1d86c6 97%,#7ab3ff 100%); /* IE10+ */
	background: linear-gradient(to bottom,  #59a8e5 0%,#1d86c6 97%,#7ab3ff 100%); /* W3C */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#59a8e5', endColorstr='#7ab3ff',GradientType=0 ); /* IE6-9 */

	font-size: 2em;
	background-color: linearGradient();
}

button:hover 	{
	box-shadow: inset 1px 1px rgba(20,20,100,0.55),
							inset -1px -1px rgba(20,20,100,0.55),
							0px 13px #0e6491,
							0px 15px 12px -3px black;
	top: -3px;
}

button:active {
	-webkit-box-shadow: inset 1px 1px rgba(20,20,100,0.55),
							inset -1px -1px rgba(20,20,100,0.55),
							0px 0px rgb(45, 100, 186);
	box-shadow: inset 1px 1px rgba(20,20,100,0.55),
							inset -1px -1px rgba(20,20,100,0.55),
							0px 0px #10618d;
	top: 10px;
}

button:focus 	{
	outline: none;
}

input.subscribe {
	width: 500px;
	font-size: inherit;
	font-family: inherit;
	margin: 50px auto;
	display: block;
	border-radius: 5px;
	border-width: thin;
	background: rgba(255,255,255,0.85);
	padding: 5px 15px;
	box-shadow: 0px 2px 2px rgba(20,20,100,0.2);
	text-align: center;
}

::-webkit-input-placeholder { /* WebKit browsers */
	color: rgba(0,0,0,0.55);
}
:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
		color: rgba(0,0,0,0.55);
}
::-moz-placeholder { /* Mozilla Firefox 19+ */
		color: rgba(0,0,0,0.55);
}
:-ms-input-placeholder { /* Internet Explorer 10+ */
		color: rgba(0,0,0,0.55);
}

input:focus {
	outline: none;
}

